@@ -1,5 +1,11 @@
 2017-04-12  Beth Dakin  <bdakin@apple.com>
 
+        Speculative build fix.
+
+        * UIProcess/API/Cocoa/WKViewPrivate.h:
+
+2017-04-12  Beth Dakin  <bdakin@apple.com>
+
         Attempted build fix.
 
         * UIProcess/API/Cocoa/WKWebViewPrivate.h:
